# KinectOpenCVModule

./: README.md
KinectV1/: CMakeLists.txt  KinectV1Sensor.cpp  main.cpp
KinectV2/: CMakeLists.txt  KinectColorStream.cpp  main.cpp
